css: Fixes caret position on Firefox

--- a/css/nixos-site.css
+++ b/css/nixos-site.css
@@ -36,6 +36,11 @@ p {
     text-decoration: none;
 }
 
+.dropdown .caret {
+	vertical-align: middle;
+	margin-top: -3px;
+}
+
 .logo {
     margin-top: -5px;
     padding-right: 5px;
